lintian (1.23.25) UNRELEASED; urgency=low

  * checks/debconf:
    + [CW] Don't trigger partially-translated-question when Choices-C exists
      but not Description-C.
  * checks/scripts:
    + [RA] Add /usr/bin/gosh from the gauche package to the list of valid
      interpreters.  Thanks, Tatsuya Kinoshita.  (Closes: #386798)

 -- Russ Allbery <rra@debian.org>  Sun, 10 Sep 2006 12:00:48 -0700

lintian (1.23.24) unstable; urgency=low

  The "LSB init script" release

  * checks/control-files:
    + [RA] perm2oct definition moved to Util.pm.
  * checks/cruft{.desc,}:
    + [RA] Remove the (info-level) check for .cvsignore files in the
      source tarball.  This isn't an error; those files contain metadata
      that may be useful for people making modifications and it's quite
      common to distribute them.
  * checks/debconf{.desc,}:
    + [RA] Diagnose unknown priorities in db_input and db_text
      invocations.  Patch from Thomas Huriaux.  (Closes: #386014)
  * checks/fields{.desc,}:
    + [RA] Depending on versioned variants of python-minimal is also an
      error.  Thanks, Adeodato Simó.  (Closes: #384476)
  * checks/files:
    + [RA] perm2oct definition moved to Util.pm.
  * checks/init.d{.desc,}:
    + [RA] Added a warning for init scripts missing an LSB keyword
      section, checks of the syntax of such a section if present, and
      some basic semantic checks of the easiest fields.  Based on initial
      work by Carlos Villegas.  (Closes: #377740)
  * checks/menus:
    + [RA] perm2oct definition moved to Util.pm.
  * checks/scripts:
    + [RA] Properly concatenate the dependencies for a package when
      checking whether the dependency for an interpreter is included.
      Thanks, Vincent Danjean.  (Closes: #385178)
  * checks/shared-libs:
    + [RA] perm2oct definition moved to Util.pm.

  * lib/Util.pm:
    + [RA] Move perm2oct to here and improve recognition of s, S, t, and T