@@ -3,11 +3,14 @@ lintian (1.23.25) UNRELEASED; urgency=low
   * checks/debconf:
     + [CW] Don't trigger partially-translated-question when Choices-C exists
       but not Description-C.
+  * checks/init.d:
+    + [RA] Correctly handle LSB keywords which are present but have an
+      empty value.  Reported by Erich Schubert.  (Closes: #386968)
   * checks/scripts:
     + [RA] Add /usr/bin/gosh from the gauche package to the list of valid
       interpreters.  Thanks, Tatsuya Kinoshita.  (Closes: #386798)
 
- -- Russ Allbery <rra@debian.org>  Sun, 10 Sep 2006 12:00:48 -0700
+ -- Russ Allbery <rra@debian.org>  Mon, 11 Sep 2006 16:16:13 -0700
 
 lintian (1.23.24) unstable; urgency=low
 
